# gitnotes

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: CLAUDE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: CNAME  _config.yml  competitors.md  distribution.md  guide-deploy-release.md  guide-going-public.md  index.html  learnings.md
docs/design/: cursor.md  git-status-box.md  search-box.md
docs/plans/: 2025-01-15-section-metadata-design.md  2025-01-19-repo-quick-switch-design.md  2025-01-19-repo-quick-switch-impl.md  2025-01-20-settings-add-repo-dropdown-impl.md  2025-01-20-settings-add-repo-dropdown.md  2026-01-12-noteone-design.md  2026-01-12-noteone-implementation.md  2026-01-12-page-management-design.md  2026-01-12-page-management-impl.md  2026-01-13-note-header-frontmatter-design.md  2026-01-14-git-status-box.md  2026-01-14-unified-search-design.md  2026-01-14-unified-search-impl.md  2026-01-15-page-sorting-design.md  2026-01-16-add-repository-design.md  2026-01-16-add-repository-implementation.md  2026-01-17-git-view-impl.md  (+36 more)
site/: index.html
src/: colorpicker.ts  commit-engine.ts  commit-modal.ts  contextmenu.ts  editor.ts  frontmatter.ts  git-status.ts  git-view.ts  main.ts  modals.ts  onboarding.ts  search-bar.ts  search.ts  settings.ts  sidebar.ts  sortmenu.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  search.rs
(+34 files in other folders)
