[package]
name = "noteone"
version = "0.1.0"
description = "Lightweight markdown notes app"
authors = ["Simon Ortet"]
edition = "2021"

[lib]
name = "noteone_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "5"
trash = "5"
walkdir = "2"
chrono = "0.4"
tantivy = "0.22"
notify = "6"
notify-debouncer-mini = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
